Updated package.json with necessary changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "aqi-to-cigarettes-calculator",
   "homepage": "https://jasminedevv.github.io/AQI2cigarettes",
   "version": "0.1.0",
   "private": true,
